# e6irc

./: .dockerignore  .gitignore  AGENTS.md  BUGS.md  Cargo.toml  DESIGN.md  Dockerfile  PLAN.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/e6irc-cli/: Cargo.toml
crates/e6irc-cli/src/: main.rs
crates/e6irc-cli/tests/: e2e.rs
crates/e6irc-client/: Cargo.toml
crates/e6irc-client/src/: lib.rs
crates/e6irc-load/: Cargo.toml
crates/e6irc-load/src/: main.rs
crates/e6irc-proto/: Cargo.toml
crates/e6irc-proto/src/: base64.rs  casemap.rs  framing.rs  isupport.rs  lib.rs  mask.rs  message.rs  numerics.rs  time.rs
crates/e6irc-queue/: Cargo.toml
crates/e6irc-queue/src/: lib.rs
crates/e6irc-tui/: Cargo.toml
crates/e6irc-tui/src/: app.rs  lib.rs  main.rs
crates/e6ircd/: Cargo.toml
crates/e6ircd/assets/: auth.css
crates/e6ircd/src/: config.rs  db.rs  http.rs  lib.rs  main.rs  net.rs  sanitize.rs  secret.rs
crates/e6ircd/src/bouncer/: discord.rs  irc_driver.rs  local_driver.rs  matrix.rs  mod.rs  serve.rs  slack.rs
crates/e6ircd/src/core/: handler.rs  mod.rs  state.rs
crates/e6ircd/src/core/handler/: channel.rs  chanops.rs  history.rs  message.rs  mod.rs  monitor.rs  oper.rs  query.rs  read_marker.rs  registration.rs  sasl.rs  services.rs
crates/e6ircd/src/http/: credentials.rs  device.rs  history.rs  mod.rs  networks.rs  oidc.rs  openapi.rs  ws.rs
crates/e6ircd/templates/: account.html  device.html  login.html  network_rows.html  signed_out.html  validation.html
crates/e6ircd/tests/: attach.rs  bouncer.rs  core.rs  db.rs  driver_spi.rs  e2e.rs  http.rs  libera_compat.rs  live_compat.rs  matrix.rs  oidc.rs  secret_cli.rs  ws_irc.rs  ws_ui.rs
crates/e6ircd/tests/support/: mod.rs
deploy/: README.md  docker-entrypoint.sh
docs/: terminology.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: base64_roundtrip.rs  bouncer_lines.rs  client_messages.rs  core_dispatch.rs  core_multi.rs  framing.rs  isupport_token.rs  mask_matching.rs  parse_message.rs  tag_escaping.rs  truncate_boundary.rs
migrations/: 0001_accounts.sql  0002_channels.sql  0003_web_auth.sql  0004_api_tokens.sql  0005_messages.sql  0006_read_markers.sql  0007_bnc_networks.sql  0008_bnc_buffer.sql  0009_device_grants.sql  0010_channel_topic.sql  0011_channel_access.sql  0012_server_bans.sql  0013_audit_log.sql  0014_api_token_id.sql  0015_server_ban_kind.sql  0016_bnc_network_enabled.sql  0017_channel_keeptopic.sql  0018_channel_mlock.sql  0019_web_session_id_token.sql  0020_oidc_coordinated_logout.sql  0021_prune_indexes.sql  0022_dm_history.sql  0023_account_name_separator_guard.sql  0024_web_session_identity.sql  0025_bnc_buffer_owner_casefold.sql  0026_oidc_logout_expiry_index.sql  0027_messages_covering_index.sql  0028_drop_audit_log_created_idx.sql  0029_server_ban_mask_casefold.sql
test/shauth/: compose.override.yaml
tools/: check-dead-code.sh  check-dead-pub.sh  check-duplication.sh  check-noops.sh  dex-config.yaml  prune-ghcr-versions-selection.jq  prune-ghcr-versions.sh  test-oidc-browser.mjs  test-prune-ghcr-versions.sh  test-shauth-sso.mjs  test-shauth-sso.sh  verify-container-shape.sh
tools/load/: README.md  sweep.sh
web/: VENDOR.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
web/src/: main.js  style.css
