[package]
name = "e6irc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "AGPL-3.0-or-later"

[package.metadata]
cargo-fuzz = true

[dependencies]
# 0.4.13 published 2026-06-04 — satisfies the 24h cooldown. Default
# features stay ON: the `link_libfuzzer` default feature links the
# libFuzzer runtime that provides `main` — disabling it breaks the link
# with "undefined symbol: main".
libfuzzer-sys = { version = "0.4.13" }
e6irc-proto = { path = "../crates/e6irc-proto" }
e6ircd = { path = "../crates/e6ircd" }
e6irc-queue = { path = "../crates/e6irc-queue" }
e6irc-client = { path = "../crates/e6irc-client" }
e6irc-tui = { path = "../crates/e6irc-tui" }

[[bin]]
name = "parse_message"
path = "fuzz_targets/parse_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tag_escaping"
path = "fuzz_targets/tag_escaping.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_messages"
path = "fuzz_targets/client_messages.rs"
test = false
doc = false
bench = false

[[bin]]
name = "core_multi"
path = "fuzz_targets/core_multi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "core_dispatch"
path = "fuzz_targets/core_dispatch.rs"
test = false
doc = false
bench = false

[[bin]]
name = "isupport_token"
path = "fuzz_targets/isupport_token.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

[workspace]

[[bin]]
name = "truncate_boundary"
path = "fuzz_targets/truncate_boundary.rs"
test = false
doc = false

[[bin]]
name = "framing"
path = "fuzz_targets/framing.rs"
test = false
doc = false

[[bin]]
name = "base64_roundtrip"
path = "fuzz_targets/base64_roundtrip.rs"
test = false
doc = false
